--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-    "name": "openapi-client-typescript-rxjs",
-    "version": "0.0.1",
-    "main": "mount/dist/cjs/index.js",
-    "module": "mount/dist/esm/index.js",
-    "unpkg": "mount/dist/umd/index.js",
-    "typings": "mount/dist/types/index.d.ts",
-    "files": [
-        "mount/dist/cjs/*",
-        "mount/dist/esm/*",
-        "mount/dist/umd/*",
-        "mount/dist/types/*"
-    ],
-    "scripts": {
-        "build": "npm run clean && tsc --module es2015 --project tsconfig.json && rollup -c rollup.config.ts",
-        "clean": "rimraf mount/dist && rimraf docs"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.5.4",
-        "@babel/preset-env": "^7.5.4",
-        "@babel/preset-typescript": "^7.3.3",
-        "rimraf": "^2.6.2",
-        "rollup": "^1.6.0",
-        "rollup-plugin-babel": "^4.3.2",
-        "rollup-plugin-commonjs": "^9.2.1",
-        "rollup-plugin-json": "^4.0.0",
-        "rollup-plugin-node-resolve": "^4.0.1",
-        "rollup-plugin-peer-deps-external": "^2.2.0",
-        "rollup-plugin-replace": "^2.1.1",
-        "rollup-plugin-sourcemaps": "^0.4.2",
-        "rollup-plugin-terser": "^4.0.4",
-        "typescript": "^3.5.2"
-    },
-    "dependencies": {
-        "rxjs": "^6.5.2"
-    }
+  "name": "openapi-client-typescript-rxjs",
+  "version": "0.0.1",
+  "main": "mount/dist/cjs/index.js",
+  "module": "mount/dist/esm/index.js",
+  "unpkg": "mount/dist/umd/index.js",
+  "typings": "mount/dist/types/index.d.ts",
+  "files": [
+    "mount/dist/cjs/*",
+    "mount/dist/esm/*",
+    "mount/dist/umd/*",
+    "mount/dist/types/*"
+  ],
+  "scripts": {
+    "build": "npm run clean && tsc --module es2015 --project tsconfig.json && rollup -c rollup.config.ts",
+    "clean": "rimraf mount/dist && rimraf docs"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
+    "@babel/preset-typescript": "^7.3.3",
+    "rimraf": "^2.6.2",
+    "rollup": "^1.6.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-replace": "^2.1.1",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-terser": "^4.0.4",
+    "typescript": "~3.7.2"
+  },
+  "dependencies": {
+    "rxjs": "^6.5.2"
+  }
 }
